syntax = "proto3";

package com.st.proto;

enum ColorProto {
    RED = 0;
    BLUE = 1;
    YELLOW = 2;
    GREEN = 3;
    GRAY = 4;
}

message ColorCardProto {
    optional ColorProto color = 1;
    optional int32 value = 2;
}

enum CardTypeProto {
    COLOR_CARD = 0;
    RETREAT = 1;
    CAULDRON = 2;
}

message CardProto {
    optional CardTypeProto type = 1;
    optional ColorCardProto color_card = 2;
}